# lint-roller

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  input.md  lint_roller.py  main.py  pyproject.toml  rules.md
